# Usufruct

./: .gitignore  BUILDHISTORY.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  theusufruct-site-lars-refactor-plan.md
data/: article_index.json  hierarchy.json  manifest.json  validation_report.json
data/rs/: chunks.jsonl  citation_edges.csv  folder_map.json  hierarchy.json  manifest.json  notes.jsonl  phase2_gaps.json  sections.jsonl  tree.json  validation_report.json
data/rs/sections/: rs_1_1.json  rs_1_10.json  rs_1_11.json  rs_1_11_1.json  rs_1_12.json  rs_1_13.json  rs_1_14.json  rs_1_15.json  rs_1_16.json  rs_1_17.json  rs_1_18.json  rs_1_2.json  rs_1_3.json  rs_1_4.json  rs_1_5.json  rs_1_50.json  rs_1_51.json  rs_1_52.json  rs_1_53.json  rs_1_54.json  rs_1_55.json  rs_1_55_1.json  rs_1_56.json  rs_1_57.json  rs_1_58.json  rs_1_58_1.json  rs_1_58_2.json  rs_1_58_3.json  rs_1_58_4.json  rs_1_58_5.json  rs_1_58_6.json  rs_1_58_7.json  rs_1_58_8.json  rs_1_58_9.json  rs_1_59.json  rs_1_6.json  rs_1_60.json  (+4 more)
scripts/: build_release.sh  seed_justia_cache.py  verify_release.sh
src/usufruct/: __init__.py  cli.py
tests/: conftest.py  test_acts_parser.py  test_hierarchy.py  test_legis_article_parser.py  test_legis_toc_parser.py  test_lrs_acts_parser.py  test_lrs_hierarchy.py  test_lrs_justia_root.py  test_lrs_justia_title.py  test_lrs_legis_section.py  test_lrs_legis_toc.py  test_lrs_orchestrate.py  test_lrs_phase4.py  test_lsu_toc_parser.py  test_orchestrate.py  test_phase4.py
tests/fixtures/: legis_toc.html  lsu_toc.html
(+103 files in other folders)
