[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usufruct"
version = "0.1.0"
description = "Scraper and data pipeline for the Louisiana Civil Code."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Usufruct", email = "logicalappeals@gmail.com"}]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
usufruct = "usufruct.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-ra"
